--- a/admin/package.json
+++ b/admin/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "element-ui": "^2.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
+    "vue2-editor": "^2.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
