--- a/admin/package.json
+++ b/admin/package.json
@@ -10,9 +10,9 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "mavon-editor": "^2.7.7",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vue2-editor": "^2.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
