--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
