--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "element-ui": "^2.4.5",
+    "mavon-editor": "^2.7.7",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
